# build-event-stream

proto/: MODULE.bazel
proto/src/main/protobuf/: BUILD.bazel  build_event_stream.proto
